--- a/back-end/FYP-backend/nbproject/project.properties
+++ b/back-end/FYP-backend/nbproject/project.properties
@@ -35,6 +35,8 @@ file.reference.gson-2.6.2.jar=web/WEB-INF/lib/gson-2.6.2.jar
 file.reference.hk2-api-2.5.0-b36.jar=web/WEB-INF/lib/hk2-api-2.5.0-b36.jar
 file.reference.hk2-locator-2.5.0-b36.jar=web/WEB-INF/lib/hk2-locator-2.5.0-b36.jar
 file.reference.hk2-utils-2.5.0-b36.jar=web/WEB-INF/lib/hk2-utils-2.5.0-b36.jar
+file.reference.httpclient-4.0.jar=C:\\Users\\Teh Ming Yi\\Downloads\\httpcomponents-client-4.0-bin\\httpcomponents-client-4.0\\lib\\httpclient-4.0.jar
+file.reference.httpmime-4.0.jar=C:\\Users\\Teh Ming Yi\\Downloads\\httpcomponents-client-4.0-bin\\httpcomponents-client-4.0\\lib\\httpmime-4.0.jar
 file.reference.jackson-annotations-2.1.2.jar=web/WEB-INF/lib/jackson-annotations-2.1.2.jar
 file.reference.jackson-core-2.8.5.jar=web/WEB-INF/lib/jackson-core-2.8.5.jar
 file.reference.jackson-databind-2.1.2.jar=web/WEB-INF/lib/jackson-databind-2.1.2.jar
@@ -70,6 +72,7 @@ file.reference.osgi-resource-locator-1.0.1.jar=web/WEB-INF/lib/osgi-resource-loc
 file.reference.persistence-api-1.0.jar=web/WEB-INF/lib/persistence-api-1.0.jar
 file.reference.stripe-java-5.7.1.jar=web/WEB-INF/lib/stripe-java-5.7.1.jar
 file.reference.unirest-java-1.3.0.jar=web/WEB-INF/lib/unirest-java-1.3.0.jar
+file.reference.unirest-java-1.4.9.jar=C:\\Users\\Teh Ming Yi\\Downloads\\unirest-java-1.4.9.jar
 file.reference.validation-api-1.1.0.Final.jar=web/WEB-INF/lib/validation-api-1.1.0.Final.jar
 file.reference.yasson-1.0.0-RC2.jar=web/WEB-INF/lib/yasson-1.0.0-RC2.jar
 includes=**
@@ -125,7 +128,10 @@ javac.classpath=\
     ${file.reference.jersey-core-1.19.jar}:\
     ${file.reference.unirest-java-1.3.0.jar}:\
     ${file.reference.mailjet-client-4.1.1.jar}:\
-    ${file.reference.json-20140107.jar}
+    ${file.reference.json-20140107.jar}:\
+    ${file.reference.unirest-java-1.4.9.jar}:\
+    ${file.reference.httpclient-4.0.jar}:\
+    ${file.reference.httpmime-4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
